@@ -1,3 +1,7 @@
+2018-02-15  Mark Wielaard  <mark@klomp.org>
+
+	* ppc_initreg.c: Include ptrace.h before system.h and sys/user.h.
+
 2018-02-09  Joshua Watt  <JPEWhacker@gmail.com>
 
 	* aarch64_retval.c (aarch64_return_value_location): Use FALLTHROUGH
